syntax = "proto3";

option csharp_namespace = "SportsDataService.API.Protos";

package team;

service TeamService {
  rpc GetAllTeamsAsync (Empty) returns (TeamListResponse);
  rpc GetTeamById (TeamByIdRequest) returns (TeamResponse);
}

message Empty {}

message TeamByIdRequest {
  string id = 1; // Guid jako string
}

message TeamResponse {
  string id = 1;
  string name = 2;
  string cityId = 3;
  string countryId = 4;
  string stadiumId = 5;
  string leagueId = 6;
  string logoUrl = 7;
  string shortName = 8;
}

message TeamListResponse {
  repeated TeamResponse teams = 1;
}
